// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary should render correctly when publishing 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingBottom": 20,
        "paddingLeft": 24,
        "paddingRight": 24,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
    ]
  }
>
  <PeachScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <BuyOfferSummary
      offer={
        {
          "amount": [
            100000,
            1000000,
          ],
          "creationDate": 2022-02-14T12:00:00.000Z,
          "meansOfPayment": {
            "EUR": [
              "sepa",
            ],
          },
          "originalPaymentData": [],
          "paymentData": {
            "sepa": {
              "hash": "TODO add payment hash",
            },
          },
          "releaseAddress": "releaseAddress",
          "type": "bid",
        }
      }
    />
  </PeachScrollView>
  <PrimaryButton
    loading={true}
    narrow={true}
    onPress={[Function]}
    style={
      {
        "alignSelf": "center",
        "marginTop": 16,
      }
    }
    testID="navigation-next"
  >
    publishing
  </PrimaryButton>
</View>
`;

exports[`Summary should render correctly while peach wallet is still signing message 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingBottom": 20,
        "paddingLeft": 24,
        "paddingRight": 24,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
    ]
  }
>
  <PeachScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <BuyOfferSummary
      offer={
        {
          "amount": [
            100000,
            1000000,
          ],
          "creationDate": 2022-02-14T12:00:00.000Z,
          "meansOfPayment": {
            "EUR": [
              "sepa",
            ],
          },
          "originalPaymentData": [],
          "paymentData": {
            "sepa": {
              "hash": "TODO add payment hash",
            },
          },
          "releaseAddress": "releaseAddress",
          "type": "bid",
        }
      }
    />
  </PeachScrollView>
  <PrimaryButton
    disabled={true}
    loading={false}
    narrow={true}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
        "marginTop": 16,
      }
    }
    testID="navigation-next"
  >
    next
  </PrimaryButton>
</View>
`;

exports[`Summary should render correctly with custom payout wallet and signature is still missing 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingBottom": 20,
        "paddingLeft": 24,
        "paddingRight": 24,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
    ]
  }
>
  <PeachScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <BuyOfferSummary
      offer={
        {
          "amount": [
            100000,
            1000000,
          ],
          "creationDate": 2022-02-14T12:00:00.000Z,
          "meansOfPayment": {
            "EUR": [
              "sepa",
            ],
          },
          "originalPaymentData": [],
          "paymentData": {
            "sepa": {
              "hash": "TODO add payment hash",
            },
          },
          "releaseAddress": "releaseAddress",
          "type": "bid",
        }
      }
    />
  </PeachScrollView>
  <PrimaryButton
    disabled={false}
    loading={false}
    narrow={true}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
        "marginTop": 16,
      }
    }
    testID="navigation-next"
  >
    next
  </PrimaryButton>
</View>
`;

exports[`Summary should render the Summary view 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingBottom": 20,
        "paddingLeft": 24,
        "paddingRight": 24,
      },
      {
        "paddingLeft": 32,
        "paddingRight": 32,
      },
    ]
  }
>
  <PeachScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <BuyOfferSummary
      offer={
        {
          "amount": [
            100000,
            1000000,
          ],
          "creationDate": 2022-02-14T12:00:00.000Z,
          "meansOfPayment": {
            "EUR": [
              "sepa",
            ],
          },
          "originalPaymentData": [],
          "paymentData": {
            "sepa": {
              "hash": "TODO add payment hash",
            },
          },
          "releaseAddress": "releaseAddress",
          "type": "bid",
        }
      }
    />
  </PeachScrollView>
  <PrimaryButton
    loading={false}
    narrow={true}
    onPress={[Function]}
    style={
      {
        "alignSelf": "center",
        "marginTop": 16,
      }
    }
    testID="navigation-next"
  >
    publish
  </PrimaryButton>
</View>
`;
